--- a/style.css
+++ b/style.css
@@ -42,3 +42,13 @@
 .catagories img{
     width: 100px;
 }
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px gray;
+    border-radius: 10px;
+}
+.card-footer{
+    background-color: white;
+    padding: 0px;
+    border-top: 0px;
+}
